<resources>
    <string name="app_name">Login</string>
    <!--Login-->
    <string name="message_error_user_and_password">User or password invalid. Please try again.</string>
    <string name="message_error_password_length">The password must have a length plus 6 characters</string>
    <string name="title_login">Login</string>
    <string name="title_error">Error</string>
    <string name="lbl_sign_up">Register</string>
    <string name="lbl_login">Log In</string>
    <string name="lbl_user">E-mail</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_recovery">Recover password</string>
    <!--Custom View Dialog-->
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_message">Message</string>
    <string name="btn_logout">Exit</string>
    <string name="info_user">Information user</string>
    <string name="message_error_email_register">E-mail invalid</string>
    <string name="lbl_register">Register</string>
</resources>