<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/logo"
                        tools:ignore="ContentDescription,VectorDrawableCompat" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/AppTheme.Input">

                    <EditText
                        android:id="@+id/txt_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:hint="@string/lbl_user"
                        android:inputType="text"
                        android:drawableStart="@drawable/ic_baseline_account_circle_24"
                        style="@style/AppTheme.Input"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/AppTheme.Input">

                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/lbl_password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_create_white_24dp"
                        style="@style/AppTheme.Input"
                        android:importantForAutofill="no" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/layout_button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/lbl_login"
                        android:enabled="false"
                        android:drawableStart="@drawable/ic_baseline_touch_app_24"
                        style="@style/AppTheme.Button"/>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/lbl_sign_up"
                        style="@style/AppTheme.Button"
                        android:drawableStart="@drawable/ic_baseline_person_pin_24" />
                </LinearLayout>


                <TextView
                    android:id="@+id/lbl_recovery_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/lbl_recovery"
                    android:textColor="@color/greenLight"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/loading"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/greenLight"
                    android:indeterminate="true"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:visibility="gone"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="lollipop" />

            </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>